--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" href="/logo/nexea.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo/nexea.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo/nexea.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 
     <!-- Google Font -->
