--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="/logo/nexea.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo/nexea.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/logo/nexea.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo/nexea.png" />
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,10 +40,7 @@
 
     <title>Nexea Event App</title>
 
-    <meta
-      name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
+    <meta name="description" content="Book your event now!" />
     <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
   </head>
 
