--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
       })(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+
+      fbq('init', '598753975606755');
+      fbq('track', 'PageView');
     </script>
 
     <script type="module" src="/src/main.jsx"></script>
