--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script>
       const global = globalThis;
     </script>
-    <script>
+    <!-- <script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
@@ -70,7 +70,7 @@
 
       fbq('init', '598753975606755');
       fbq('track', 'PageView');
-    </script>
+    </script> -->
 
     <script type="module" src="/src/main.jsx"></script>
   </body>
